--- a/Website/HTML/index.html
+++ b/Website/HTML/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../CSS/index.css">
   <script src="../JS/header.js"></script>
   
-  <title>unplugged</title>
+  <title>Unplugged</title>
 </head>
 
 <body>
