feat: cursor looks in index.html and deleted 3 html pages of which the contents are not needed anymore

--- a/Website/HTML/index.html
+++ b/Website/HTML/index.html
@@ -109,7 +109,7 @@
           <div class="input-field">
             <input type="search" class="search-input" />
           </div>
-          <button type="button" class="search-button" onclick="">
+          <button type="submit" class="search-button" onclick="">
             <div class="search-button-text">Submit</div>
           </button>
         </div>
