--- a/Website/HTML/loc_short.html
+++ b/Website/HTML/loc_short.html
@@ -131,7 +131,7 @@
         <img src="../img/loc_short/loc4/pic1.png" alt="Ort 4">
         <div class="text">
           <h3>Ort 4</h3>
-          <p></p>
+          <p>Florian mach doch hier den Text hin</p>
           <button class="button" onclick="">Besuchen</button>
         </div>
       </div>
@@ -140,7 +140,7 @@
         <img src="../img/loc_short/loc5/pic3.png" alt="Ort 5">
         <div class="text">
           <h3>Ort 5</h3>
-          <p></p>
+          <p>und hier auch</p>
           <button class="button" onclick="">Besuchen</button>
         </div>
       </div>
