feat: header and footer for loc_single + adaptions and write short descriptions for place 4 and 5

--- a/Website/HTML/loc_short.html
+++ b/Website/HTML/loc_short.html
@@ -131,7 +131,7 @@
         <img src="../img/loc_short/loc4/pic1.png" alt="Ort 4">
         <div class="text">
           <h3>Ort 4</h3>
-          <p>Florian mach doch hier den Text hin</p>
+          <p>Erleben Sie pure Erholung. Raus aus der Stadt und dem Hamsterrad, rein in den Seelenfrieden und die Gemütlichkeit.</p>
           <button class="button" onclick="">Besuchen</button>
         </div>
       </div>
@@ -140,7 +140,7 @@
         <img src="../img/loc_short/loc5/pic3.png" alt="Ort 5">
         <div class="text">
           <h3>Ort 5</h3>
-          <p>und hier auch</p>
+          <p>Lassen Sie Ihren Stress hinter sich und nehmen Sie sich etwas Auszeit in der reinen und sauberen Wildnis.</p>
           <button class="button" onclick="">Besuchen</button>
         </div>
       </div>
