--- a/Website/HTML/loc_single.html
+++ b/Website/HTML/loc_single.html
@@ -1,57 +1,174 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
+  <link rel="stylesheet" href="../CSS/header.css">
+  <link rel="stylesheet" href="../CSS/footer.css">
   <link rel="stylesheet" href="../CSS/loc_single.css">
+  <script src="../JS/header.js"></script>
+
+  <title>Orte</title>
 </head>
 <body>
-  <div class="ort-einzeln">
-    <div class="hero-basic">
-      <div class="text-content-title">
-        <div class="title">Ort 1</div>
-        <div class="subtitle">“Innere Ruhe”</div>
+  <header class="nav-bar">
+    <div class="navigation-pill-list">
+        <div class="navigation-pill">
+            <a href="./loc_short.html" class="title">Orte</a>
+        </div>
+        <div class="navigation-pill">
+            <a href="./about.html" class="title">Über uns</a>
+        </div>
+        <div class="navigation-pill">
+            <a href="./contact.html" class="title">Kontakt</a>
+        </div>
+    </div>
+
+    <div class="button-container">
+        <button type="button" class="button login-button" onclick="openLogin()">
+            <div class="button-text login">Einloggen</div>
+        </button>
+        <button type="button" class="button register-button" onclick="openRegister()">
+            <div class="button-text register">Registrieren</div>
+        </button>
+    </div>
+
+    <div id="login-window">
+        <div class="form">
+            <div class="input-field">
+              <div class="label">E-Mail</div>
+              <input type="email" placeholder="max.muster@gmail.com" class="input" />
+            </div>
+            <div class="input-field">
+              <div class="label">Passwort</div>
+              <input type="password" placeholder="Wert" class="input" />
+            </div>
+            <div class="frm-button-group">
+              <div class="frm-button">
+                <div class="frm-button-text">Einloggen</div>
+              </div>
+            </div>
+            <div class="text-link">
+              <button type="frm-button" class="text-link2" onclick="forgotPW()">Passwort vergessen?</button>
+            </div>
+        </div>
+    </div>
+
+    <div id="forgot-password">
+        <div class="form forgot-password-frm">
+            <div class="input-field">
+                <div class="label">E-Mail</div>
+                <input type="email" placeholder="max.muster@gmail.com" class="input" />
+            </div>
+            <div class="frm-button-group-forgot-pw">
+                <button type="button" class="frm-button" onclick="returnForgotPW()">
+                    <div class="frm-button-text">Zurück</div>
+                </button>
+                <div class="frm-button">
+                    <div class="frm-button-text">Passwort zurücksetzen</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="register-window">
+        <div class="form register-frm">
+            <div class="input-field">
+                <div class="label">E-Mail</div>
+                <input type="email" placeholder="max.muster@gmail.com" class="input">
+            </div>
+            <div class="input-field">
+                <div class="label">Passwort</div>
+                <input type="password" placeholder="Wert" class="input">
+            </div>
+            <div class="frm-button-group">
+                <div class="frm-button">
+                    <div class="frm-button-text">Registrieren</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <a href="./index.html" class="logo-text-container">
+        <div class="logo-container">
+            <img class="logo-nav" src="../img/unplugged_coloured.png" />
+        </div>
+        <div class="unplugged">unplugged</div>
+    </a>
+  </header>
+
+  <main>
+    <div class="place-single">
+      <div class="hero-basic">
+        <div class="text-content-title">
+          <div class="place-title">Ort 1</div>
+          <div class="place-subtitle">“Innere Ruhe”</div>
+        </div>
       </div>
-    </div>
-    <div class="panel-image-double">
-      <img class="image" src="image0.png" />
-      <img class="image" src="image1.png" />
-    </div>
-    <div class="body">
-      <div class="text">
-        <div class="title2">Title</div>
-        <div
-          class="lorem-ipsum-dolor-sit-amet-consetetur-sadipscing-elitr-sed-diam-nonumy-eirmod-tempor-invidunt-ut-labore-et-dolore-magna-aliquyam-erat-sed-diam-voluptua-at-vero-eos-et-accusam-et-justo-duo-dolores-et-ea-rebum-stet-clita-kasd-gubergren-no-sea-takimata-sanctus-est-lorem-ipsum-dolor-sit-amet-lorem-ipsum-dolor-sit-amet-consetetur-sadipscing-elitr-sed-diam-nonumy-eirmod-tempor-invidunt-ut-labore-et-dolore-magna-aliquyam-erat-sed-diam-voluptua-at-vero-eos-et-accusam-et-justo-duo-dolores-et-ea-rebum-stet-clita-kasd-gubergren-no-sea-takimata-sanctus-est-lorem-ipsum-dolor-sit-amet-lorem-ipsum-dolor-sit-amet-consetetur-sadipscing-elitr-sed-diam-nonumy-eirmod-tempor-invidunt-ut-labore-et-dolore-magna-aliquyam-erat-sed-diam-voluptua-at-vero-eos-et-accusam-et-justo-duo-dolores-et-ea-rebum-stet-clita-kasd-gubergren-no-sea-takimata-sanctus-est-lorem-ipsum-dolor-sit-amet-duis-autem-vel-eum-iriure-dolor-in-hendrerit-in-vulputate-velit-esse-molestie-consequat-vel-illum-dolore-eu-feugiat-nulla-facilisis-at-vero-eros-et-accumsan-et-iusto-odio-dignissim-qui-blandit-praesent-luptatum-zzril-delenit-augue-duis-dolore-te-feugait-nulla-facilisi-lorem-ipsum-dolor-sit-amet-consectetuer-adipiscing-elit-sed-diam-nonummy-nibh-euismod-tincidunt-ut-laoreet-dolore-magna-aliquam-erat-volutpat-ut-wisi-enim-ad-minim-veniam-quis-nostrud-exerci-tation-ullamcorper-suscipit-lobortis-nisl-ut-aliquip-ex-ea-commodo-consequat-duis-autem-vel-eum-iriure-dolor-in-hendrerit-in-vulputate-velit-esse"
-        >
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
-          eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
-          voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
-          clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
-          amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-          nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-          sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
-          rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem
-          ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
-          elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
-          aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
-          dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus
-          est Lorem ipsum dolor sit amet.
-          <br />
-          Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse
-          molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero
-          eros et accumsan et iusto odio dignissim qui blandit praesent luptatum
-          zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum
-          dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
-          euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-          <br />
-          Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper
-          suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem
-          vel eum iriure dolor in hendrerit in vulputate velit esse
+      <div class="panel-image-double">
+        <img class="image" src="" />
+        <img class="image" src="" />
+      </div>
+      <div class="body">
+        <div class="text">
+          <div class="title2">Title</div>
+          <div class="place-description">
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
+            eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
+            voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
+            clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
+            amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+            nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+            sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
+            rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem
+            ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
+            elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
+            aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
+            dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus
+            est Lorem ipsum dolor sit amet.
+            <br />
+            Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse
+            molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero
+            eros et accumsan et iusto odio dignissim qui blandit praesent luptatum
+            zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum
+            dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+            euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+            <br />
+            Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper
+            suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem
+            vel eum iriure dolor in hendrerit in vulputate velit esse
+          </div>
         </div>
       </div>
     </div>
-  </div>
+  </main>
+
+  <footer>
+    <div class="button-list">
+        <a href="https://www.litec.ac.at/"><img class="logo-litec" src="../img/litec.png" /></a>
+        <a href="https://www.instagram.com/litec.htl/"><img class="logo-instagram" src="../img/instagram.svg" /></a>
+        <a href="https://www.youtube.com/@litechtlpaul-hahn582"><img class="logo-youtube" src="../img/youtube.svg" /></a>
+        <a href="https://www.tiktok.com/@litec.htl?_t=ZN-8tS1FR6wXfq&_r=1"><img class="logo-tiktok" src="../img/tiktok.png" /></a>
+    </div>
+
+    <div class="footer-links-container">
+        <div class="text-strong">Impressum</div>
+        <div class="text-strong">AGB</div>
+    </div>
+
+    <div class="unplugged-container">
+        <div class="unplugged-logo-text-container">
+            <img class="unplugged-logo" src="../img/unplugged_black.png" />
+            <div class="unplugged-text">unplugged</div>
+        </div>
+        <div class="unplugged-copyright">
+            Copyright
+            <img src="../img/copyright.png" />
+            2025 unplugged
+        </div>
+    </div>
+</footer>
   
 </body>
 </html>
