--- a/Website/HTML/about.html
+++ b/Website/HTML/about.html
@@ -124,7 +124,7 @@
                 </div>
             </div>
             <div class="profile img2">
-                <img src="../img/about/" alt="Mario Steinbauer">
+                <img src="../img/about/Mario.jpg" alt="Mario Steinbauer">
                 <div>
                     <h2>Mario Steinbauer</h2>
                     <p>Mein Name ist Mario Steinbauer. Ich befasse mich in meiner Freizeit sehr gern mit Psychologie. Mir ist das Projekt ein Anliegen, weil ich, sowie viele andere Jugendliche in Österreich, das Gefühl von Isolation und digitaler Überstimulation nur zu gut kenne. Ein gesundes soziales Umfeld ist essenziell für ein gutes Wohlbefinden.</p>
