fix: contact frm h1 margin and login pop up size

--- a/Website/HTML/contact.html
+++ b/Website/HTML/contact.html
@@ -101,13 +101,13 @@
         <h1>Kontaktformular</h1>
         <form>
             <label for="vorname">Vorname</label>
-            <input type="text" id="vorname" placeholder="Max" disabled>
+            <input class="contact-input" type="text" id="vorname" placeholder="Max">
 
             <label for="nachname">Nachname</label>
-            <input type="text" id="nachname" placeholder="Muster" disabled>
+            <input class="contact-input" type="text" id="nachname" placeholder="Muster">
 
             <label for="email">E-Mail</label>
-            <input type="email" id="email" placeholder="max.muster@gmail.com" disabled>
+            <input class="contact-input" type="email" id="email" placeholder="max.muster@gmail.com">
 
             <label for="nachricht">Nachricht</label>
             <textarea id="nachricht" placeholder="Text"></textarea>
