feat: new status

--- a/Website/HTML/index.html
+++ b/Website/HTML/index.html
@@ -105,6 +105,14 @@
 
       <div class="search-container">
         <div class="main-content-title">unplugged</div>
+        <div class="search-field">
+          <div class="input-field">
+            <input type="search" class="search-input" placeholder="Nach dem Glück suchen..."/>
+          </div>
+          <button type="submit" class="search-button" onclick="">
+            <div class="search-button-text">Suchen</div>
+          </button>
+        </div>
       </div>
     </div>
 
