--- a/Website/HTML/loc_short.html
+++ b/Website/HTML/loc_short.html
@@ -101,11 +101,11 @@
   <main>
     <div class="cards">
       <div class="card">
-        <img src="../img/loc_short/loc1/outside1.png" alt="Ort 1">
+        <img src="../img/loc_short/loc1/outside1.png" alt="Ort 1" >
         <div class="text">
           <h3>Ort 1</h3>
           <p>Genießen Sie Ihre freie Zeit an einem Lagerfeuer und der frischen Luft. Weg vom Stress und rein in die Natur, pur.</p>
-          <button class="button" onclick="">Besuchen</button>
+          <button class="button" onclick="besuchen('Ort 1')">Besuchen</button>
         </div>
       </div>
 
@@ -114,7 +114,7 @@
         <div class="text">
           <h3>Ort 2</h3>
           <p>Fühlen Sie die exotischen Züge Österreichs mit der umfangreichen Flora und Fauna.</p>
-          <button class="button" onclick="">Besuchen</button>
+          <button class="button" onclick="besuchen('Ort 2')">Besuchen</button>
         </div>
       </div>
 
@@ -123,7 +123,7 @@
         <div class="text">
           <h3>Ort 3</h3>
           <p>Spüren Sie die erfrischende Brise des Tages und lassen Sie sich von der wirklichen Natur verzaubern.</p>
-          <button class="button" onclick="">Besuchen</button>
+          <button class="button" onclick="besuchen('Ort 3')">Besuchen</button>
         </div>
       </div>
 
@@ -132,7 +132,7 @@
         <div class="text">
           <h3>Ort 4</h3>
           <p>Erleben Sie pure Erholung. Raus aus der Stadt und dem Hamsterrad, rein in den Seelenfrieden und die Gemütlichkeit.</p>
-          <button class="button" onclick="">Besuchen</button>
+          <button class="button" onclick="besuchen('Ort 4')">Besuchen</button>
         </div>
       </div>
 
@@ -141,7 +141,7 @@
         <div class="text">
           <h3>Ort 5</h3>
           <p>Lassen Sie Ihren Stress hinter sich und nehmen Sie sich etwas Auszeit in der reinen und sauberen Wildnis.</p>
-          <button class="button" onclick="">Besuchen</button>
+          <button class="button" onclick="besuchen('Ort 5')">Besuchen</button>
         </div>
       </div>
     </div>
