changed: classes so pictures and text can be overwritte. Also it will make the picture fit automatically in the area

--- a/Website/HTML/loc_single.html
+++ b/Website/HTML/loc_single.html
@@ -100,15 +100,14 @@
 
   <main>
     <div class="place-single">
-      <div class="hero-basic">
-        <div class="text-content-title">
-          <div class="place-title">Ort 1</div>
-          <div class="place-subtitle">“Innere Ruhe”</div>
-        </div>
+      <div class="hero-basic"></div>
+      <div class="text-content-title">
+        <div class="place-title">Ort 1</div>
+        <div class="place-subtitle">“Innere Ruhe”</div>
       </div>
       <div class="panel-image-double">
-        <img class="image" src="" />
-        <img class="image" src="" />
+        <img class="image1" src="" />
+        <img class="image2" src="" />
       </div>
       <div class="body">
         <div class="text">
