feat: naming convention for images, js for loading single locations independently, adjust margin for cards in about.css

--- a/Website/HTML/loc_short.html
+++ b/Website/HTML/loc_short.html
@@ -101,47 +101,47 @@
   <main>
     <div class="cards">
       <div class="card">
-        <img src="../img/loc_short/loc1/outside1.png" alt="Ort 1" >
+        <img src="../img/loc_short/loc1/img2.png" alt="Ort 1" >
         <div class="text">
           <h3>Ort 1</h3>
           <p>Genießen Sie Ihre freie Zeit an einem Lagerfeuer und der frischen Luft. Weg vom Stress und rein in die Natur, pur.</p>
-          <button class="button" onclick="besuchen('Ort 1')">Besuchen</button>
+          <button class="button" onclick="setIndex(0)">Besuchen</button>
         </div>
       </div>
 
       <div class="card">
-        <img src="../img/loc_short/loc2/outside1.png" alt="Ort 2">
+        <img src="../img/loc_short/loc2/hero.png" alt="Ort 2">
         <div class="text">
           <h3>Ort 2</h3>
           <p>Fühlen Sie die exotischen Züge Österreichs mit der umfangreichen Flora und Fauna.</p>
-          <button class="button" onclick="besuchen('Ort 2')">Besuchen</button>
+          <button class="button" onclick="setIndex(1)">Besuchen</button>
         </div>
       </div>
 
       <div class="card">
-        <img src="../img/loc_short/loc3/outside.png" alt="Ort 3">
+        <img src="../img/loc_short/loc3/hero.png" alt="Ort 3">
         <div class="text">
           <h3>Ort 3</h3>
           <p>Spüren Sie die erfrischende Brise des Tages und lassen Sie sich von der wirklichen Natur verzaubern.</p>
-          <button class="button" onclick="besuchen('Ort 3')">Besuchen</button>
+          <button class="button" onclick="setIndex(2)">Besuchen</button>
         </div>
       </div>
 
       <div class="card">
-        <img src="../img/loc_short/loc4/pic1.png" alt="Ort 4">
+        <img src="../img/loc_short/loc4/hero.png" alt="Ort 4">
         <div class="text">
           <h3>Ort 4</h3>
           <p>Erleben Sie pure Erholung. Raus aus der Stadt und dem Hamsterrad, rein in den Seelenfrieden und die Gemütlichkeit.</p>
-          <button class="button" onclick="besuchen('Ort 4')">Besuchen</button>
+          <button class="button" onclick="setIndex(3)">Besuchen</button>
         </div>
       </div>
 
       <div class="card">
-        <img src="../img/loc_short/loc5/pic3.png" alt="Ort 5">
+        <img src="../img/loc_short/loc5/hero.png" alt="Ort 5">
         <div class="text">
           <h3>Ort 5</h3>
           <p>Lassen Sie Ihren Stress hinter sich und nehmen Sie sich etwas Auszeit in der reinen und sauberen Wildnis.</p>
-          <button class="button" onclick="besuchen('Ort 5')">Besuchen</button>
+          <button class="button" onclick="setIndex(4)">Besuchen</button>
         </div>
       </div>
     </div>
@@ -172,6 +172,5 @@
         </div>
     </div>
   </footer>
-
 </body>
 </html>
