--- a/Website/HTML/loc_single.html
+++ b/Website/HTML/loc_single.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="../CSS/footer.css">
   <link rel="stylesheet" href="../CSS/loc_single.css">
   <script src="../JS/header.js"></script>
+  <script src="../JS/loc_single.js"></script>
 
   <title>Orte</title>
 </head>
@@ -100,14 +101,14 @@
 
   <main>
     <div class="place-single">
-      <div class="hero-basic"></div>
+      <div id="hero-basic"></div>
       <div class="text-content-title">
-        <div class="place-title">Ort 1</div>
-        <div class="place-subtitle">“Innere Ruhe”</div>
+        <div class="place-title" id="place-title">Ort 1</div>
+        <div class="place-subtitle" id="place-subtitle">“Innere Ruhe”</div>
       </div>
       <div class="panel-image-double">
-        <img class="image1" src="" />
-        <img class="image2" src="" />
+        <img id="image1" src="" />
+        <img id="image2" src="" />
       </div>
       <div class="body">
         <div class="text">
