--- a/Website/HTML/about.html
+++ b/Website/HTML/about.html
@@ -113,7 +113,7 @@
                 <div>
                     <h2>Joel Kalkusch</h2>
                     <p>Hey, ich bin Joel Kalkusch und bin Schüler des Linzer Technikums. Ich agiere als Entwickler und bin einer der Gründer von “unplugged”. Ich gehe in die 4. Klasse Informationstechnologie und bin 19 Jahre alt.</p>
-                    <blockquote>“Trauer ist der Beweis, dass man glücklich war. Und wer einmal glücklich war, kann es wieder sein”</blockquote>
+                    <blockquote>„Der einzige Weg, großartige Arbeit zu leisten, ist zu lieben, was man tut.“</blockquote>
                 </div>
             </div>
             <div class="profile img1">
