feat: removed Miriam and Mario from about.html

--- a/Website/HTML/about.html
+++ b/Website/HTML/about.html
@@ -108,26 +108,12 @@
                     <blockquote>„Ganz okay wird der, der 1000 Sachen einmal probiert, doch perfekt nur der, der eine Sache 1000-mal trainiert.”</blockquote>
                 </div>
             </div>
-            <div class="profile img2">
+            <div class="profile img2 last-profile">
                 <img src="../img/about/Joel.png" alt="Joel Kalkusch">
                 <div>
                     <h2>Joel Kalkusch</h2>
                     <p>Hey, ich bin Joel Kalkusch und bin Schüler des Linzer Technikums. Ich agiere als Entwickler und bin einer der Gründer von “unplugged”. Ich gehe in die 4. Klasse Informationstechnologie und bin 19 Jahre alt.</p>
                     <blockquote>“Trauer ist der Beweis, dass man glücklich war. Und wer einmal glücklich war, kann es wieder sein”</blockquote>
-                </div>
-            </div>
-            <div class="profile img1">
-                <img src="../img/about/Miriam.png" alt="Miriam Aistleitner">
-                <div>
-                    <h2>Miriam Aistleitner</h2>
-                    <p>Ich bin Miriam Aistleitner, 18 Jahre alt und gehe in die Paul Hahn. Ich habe schon sehr früh Erfahrung mit Psychischen Problemen und Einsamkeit gemacht und somit ist mir dieses Projekt ein persönliches Anliegen, denn sehr viele dieser Probleme können durch ein paar gute Freunde gelöst werden.</p>
-                </div>
-            </div>
-            <div class="profile img2">
-                <img src="../img/about/Mario.jpg" alt="Mario Steinbauer">
-                <div>
-                    <h2>Mario Steinbauer</h2>
-                    <p>Mein Name ist Mario Steinbauer. Ich befasse mich in meiner Freizeit sehr gern mit Psychologie. Mir ist das Projekt ein Anliegen, weil ich, sowie viele andere Jugendliche in Österreich, das Gefühl von Isolation und digitaler Überstimulation nur zu gut kenne. Ein gesundes soziales Umfeld ist essenziell für ein gutes Wohlbefinden.</p>
                 </div>
             </div>
         </section>
